# AWclone

./: .gitignore  CMakeLists.txt  README.md  TODO.md  advance_wars_clone.sln  advance_wars_clone.vcxproj  debug_cmake_build.sh  run_cmake_debug_ver  run_cmake_release_ver
etc/: i965.supp
game/: CMakeLists.txt  gfx_config
game/cfg/: CMakeLists.txt  atlas_config  gfx_config
game/src/: game.cpp  map.cpp  map.hpp  util.hpp
game/src/ecs_ext/: core.hpp  location_comp.hpp  location_system.hpp  name_comp.hpp  name_system.hpp  sprite_comp.hpp  sprite_system.hpp  terrain_comp.hpp  texture_comp.hpp  texture_system.hpp  tile.hpp  tile_manager.hpp
game/src/map/: board.cpp  board.hpp
lib/: CMakeLists.txt
lib/include/ecs/: component.hpp  config.hpp  core.hpp  entity.hpp  manager.hpp
lib/include/gfx/: atlas.hpp  component.hpp  config.hpp  core.hpp  data_structs.hpp  gfx.hpp  render_helper.hpp  sdl_wrapper.hpp  texture_map.hpp
lib/include/util/: lexical.hpp  timer.hpp
res/: CMakeLists.txt
res/map_tiles/: CMakeLists.txt
res/units/: CMakeLists.txt
src/: component.cpp  component.h  data_structs.h  game.cpp  gfx.cpp  gfx.h  main.cpp  map.cpp  map.h  render_helper.h  util.cpp  util.h
